Update isi website dengan versi terbaru

--- a/kontak.html
+++ b/kontak.html
@@ -76,7 +76,7 @@
       <a href="kontak.html">Kontak</a>
     </div>
     <div class="credit">
-      <p>Created by <a href="#">@nailarh</a> | &copy; 2025</p>
+      <p>Created by <a href="#">KedaiMaknanun</a> | &copy; 2025</p>
     </div>
   </footer>
 
