--- a/menu.html
+++ b/menu.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu | Kedai Maknanun</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/style.css" />
   <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 
-  <!-- Navbar Sama Persis -->
+  <!-- Navbar -->
   <nav class="navbar">
     <a href="index.html" class="navbar-logo">Kedai<span>Maknanun</span></a>
     <div class="navbar-nav">
@@ -24,13 +24,15 @@
       <a href="#" id="shopping-cart-button"><i data-feather="shopping-cart"></i></a>
       <a href="#" id="hamburger-menu"><i data-feather="menu"></i></a>
     </div>
+
     <div class="search-form">
       <input type="text" id="search-box" placeholder="Cari..." />
       <label for="search-box"><i data-feather="search"></i></label>
     </div>
+
     <div class="shopping-cart">
       <div class="cart-item">
-        <img src="img/produk.jpg" alt="Produk">
+        <img src="img/produk.jpg" alt="Produk" />
         <div class="item-detail">
           <h3>Nasi Goreng</h3>
           <div class="item-price">Rp20.000</div>
@@ -41,66 +43,47 @@
   </nav>
 
   <!-- Menu Section -->
-  <!-- Menu Section -->
-<section class="menu" id="menu">
-  <h2><span>Menu</span> Kami</h2>
-  <p>Pilih menu favoritmu!</p>
-  <div class="row">
-    <div class="menu-card">
-      <img src="img/produk.jpg" alt="Sate Ayam" />
-      <h3 class="menu-card-title">- Sate Ayam -</h3>
-      <p class="menu-card-price">Rp20.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/nasigoreng.jpg" alt="Nasi Goreng" />
-      <h3 class="menu-card-title">- Nasi Goreng -</h3>
-      <p class="menu-card-price">Rp18.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/rendang.jpg" alt="Rendang" />
-      <h3 class="menu-card-title">- Rendang -</h3>
-      <p class="menu-card-price">Rp25.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/soto.jpg" alt="Soto Ayam" />
-      <h3 class="menu-card-title">- Soto Ayam -</h3>
-      <p class="menu-card-price">Rp17.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/gado.jpg" alt="Gado-Gado" />
-      <h3 class="menu-card-title">- Gado-Gado -</h3>
-      <p class="menu-card-price">Rp15.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/mieayam.jpg" alt="Mie Ayam" />
-      <h3 class="menu-card-title">- Mie Ayam -</h3>
-      <p class="menu-card-price">Rp14.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/nasipadang.jpg" alt="Nasi Padang" />
-      <h3 class="menu-card-title">- Nasi Padang -</h3>
-      <p class="menu-card-price">Rp22.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/pecellele.jpg" alt="Pecel Lele" />
-      <h3 class="menu-card-title">- Pecel Lele -</h3>
-      <p class="menu-card-price">Rp16.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/bakso.jpg" alt="Bakso" />
-      <h3 class="menu-card-title">- Bakso -</h3>
-      <p class="menu-card-price">Rp15.000</p>
-    </div>
-    <div class="menu-card">
-      <img src="img/nasikuning.jpg" alt="Nasi Kuning" />
-      <h3 class="menu-card-title">- Nasi Kuning -</h3>
-      <p class="menu-card-price">Rp18.000</p>
-    </div>
-  </div>
-</section>
+  <section class="menu" id="menu">
+    <h2><span>Menu</span> Kami</h2>
+    <p>Pilih menu favoritmu!</p>
+    <div class="row">
 
+      <!-- Contoh satu menu -->
+      <div class="menu-card">
+        <img src="img/NSG.jpg" alt="Nasi Goreng" />
+        <h3 class="menu-card-title">- Nasi goreng -</h3>
+        <p class="menu-card-price">Rp.12.000</p>
+        <div class="menu-description">
+          Nasi goreng khas Maknanun dengan bumbu tradisional.
+        </div>
+      </div>
 
-  <!-- Footer Sama -->
+      <!-- Salin dan sesuaikan berikut untuk semua menu lainnya -->
+      <div class="menu-card">
+        <img src="img/NSGT.jpg" alt="Nasi Goreng Telur" />
+        <h3 class="menu-card-title">- Nasi Goreng Telur -</h3>
+        <p class="menu-card-price">Rp13.000</p>
+        <div class="menu-description">
+          Nasi goreng ditambah telur dadar, pas untuk sarapan.
+        </div>
+      </div>
+
+      <div class="menu-card">
+        <img src="img/rendang.jpg" alt="Nasi Goreng Ayam" />
+        <h3 class="menu-card-title">- Nasi Goreng Ayam -</h3>
+        <p class="menu-card-price">Rp15.000</p>
+        <div class="menu-description">
+          Nasi goreng gurih dengan potongan ayam krispi.
+        </div>
+      </div>
+
+      <!-- Tambahkan semua menu lainnya seperti contoh di atas -->
+      <!-- ... lanjutkan semua menu di sini sesuai data kamu ... -->
+
+    </div>
+  </section>
+
+  <!-- Footer -->
   <footer>
     <div class="socials">
       <a href="#"><i data-feather="instagram"></i></a>
