--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div class="shopping-cart">
       <div class="cart-item">
-        <img src="img/produk.jpg" alt="Produk">
+        <img src="img/1.jpg" alt="Produk">
         <div class="item-detail">
           <h3>Nasi Goreng</h3>
           <div class="item-price">Rp20.000</div>
@@ -42,13 +42,17 @@
   </nav>
 
   <!-- Hero Section -->
-  <section class="hero" id="home">
-    <div class="content">
-      <h1>Selamat Datang di <span>Kedai Maknanun</span></h1>
-      <p>Kuliner khas nusantara yang menggugah selera.</p>
-      <a href="menu.html" class="cta">Lihat Menu</a>
-    </div>
-  </section>
+<section class="hero" id="home">
+  <div class="content">
+    <h1>
+      Selamat Datang<br>
+      <span>di Kedai Maknanun</span>
+    </h1>
+    <p>Kuliner khas nusantara yang menggugah selera.</p>
+    <a href="menu.html" class="cta">Lihat Menu</a>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer>
@@ -65,7 +69,7 @@
       <a href="kontak.html">Kontak</a>
     </div>
     <div class="credit">
-      <p>Created by <a href="#">@nailarh</a> | &copy; 2025</p>
+      <p>Created by <a href="#">KedaiMaknanun</a> | &copy; 2025</p>
     </div>
   </footer>
 
